--- a/style.css
+++ b/style.css
@@ -5,3 +5,17 @@
   --background-color: #c3c7ca;
   --text-color: #34444f;
 }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100vh;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
+}
