--- a/style.css
+++ b/style.css
@@ -19,3 +19,15 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
+.draggable-list {
+  border: 1px solid var(--border-color);
+  color: var(--text-color);
+  padding: 0;
+  list-style-type: none;
+}
+
+.draggable-list li {
+  background-color: #fff;
+  display: flex;
+  flex: 1;
+}
