--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@ body {
 .draggable-list li:not(:last-of-type) {
   border-bottom: 1px solid var(--border-color);
 }
+
+.draggable-list .number {
+  background-color: var(--background-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  height: 60px;
+  width: 60px;
+}
