--- a/style.css
+++ b/style.css
@@ -61,3 +61,12 @@ body {
 .draggable-list li.wrong .person-name {
   color: #ff3838;
 }
+
+.draggable {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  flex: 1;
+}
